feat: create api for equipment types
