# internal/http/handler/dependencies.go
@@ -1,6 +1,7 @@
 package handler
 
 type Dependencies struct {
-	Factory    *FactoryHandler
-	Department *DepartmentHandler
+	Factory       *FactoryHandler
+	Department    *DepartmentHandler
+	EquipmentType *EquipementTypeHandler
 }
