# internal/http/response/response.go
@@ -1,7 +1,6 @@
 package response
 
 import (
-	"github.com/briandang59/be_scada/internal/model"
 	"github.com/gin-gonic/gin"
 )
 
@@ -38,30 +37,4 @@ func Error(c *gin.Context, code int, msg string) {
 type ErrorResponse struct {
 	Code    int    `json:"code" example:"400"`
 	Message string `json:"message" example:"error message"`
-}
-
-type FactoryListResponse struct {
-	Code       int             `json:"code" example:"200"`
-	Message    string          `json:"message" example:"success"`
-	Data       []model.Factory `json:"data"`
-	Pagination *Pagination     `json:"pagination"`
-}
-
-type FactoryResponse struct {
-	Code    int           `json:"code" example:"200"`
-	Message string        `json:"message" example:"success"`
-	Data    model.Factory `json:"data"`
-}
-
-type DepartmentListResponse struct {
-	Code       int             `json:"code" example:"200"`
-	Message    string          `json:"message" example:"success"`
-	Data       []model.Factory `json:"data"`
-	Pagination *Pagination     `json:"pagination"`
-}
-
-type DepartmentResponse struct {
-	Code    int           `json:"code" example:"200"`
-	Message string        `json:"message" example:"success"`
-	Data    model.Factory `json:"data"`
 }
